src/scss/blocks/single-services/service-info.scss
.service-info {
  margin-bottom: 13.1rem;
  &__img {
    margin-bottom: 7.8rem;
  }
  &__content {
    margin: 0 auto;
    max-width: 93.6rem;
  }
  h2 {
    margin-bottom: 2.8rem;
    font-family: var(--font-2);
    font-weight: 800;
    font-size: 5rem;
    color: var(--accent);
  }
  h3 {
    margin-bottom: 1.1rem;
    font-family: var(--font-2);
    font-weight: 800;
    font-size: 3.5rem;
    color: var(--accent);
  }
  p {
    line-height: 1.654;
  }
  p:not(:last-of-type) {
    margin-bottom: 2.8rem;
  }
  &__wrap {
    display: flex;
    column-gap: 2rem;
  }
  &__wrap:not(:last-of-type) {
    margin-bottom: 2.8rem;
  }
  &__wrap:first-of-type {
    margin-top: 7rem;
  }
  &__wrap:nth-of-type(2n) {
    flex-direction: row-reverse;
  }
  &__picture {
    flex: 1;
    position: relative;
    padding-bottom: 30%;
    border-radius: 2rem;
    overflow: hidden;
    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);

    img {
      position: absolute;
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;
      object-fit: cover;
    }
  }
  &__body {
    flex: 1;
    padding: 6.3rem 4.5rem;
    border-radius: 2rem;
    background: #f9f8f8;
  }
  &__subtitle {
    margin-bottom: 0.7rem;
    font-family: var(--font-2);
    font-weight: 500;
    font-size: 2.5rem;
    color: var(--accent);
  }
  &__text {
    line-height: 1.654;
  }
  &__flex {
    display: inline-flex;
    column-gap: 2.8rem;
    margin-top: 5.9rem;
  }
  &__item {
    display: flex;
    align-items: center;
    column-gap: 2.5rem;
    padding: 15px 53px 15px 17px;
    border-radius: 100px;
    background: #f9f8f8;
  }
  &__circle {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 6.9rem;
    height: 6.9rem;
    font-family: var(--font-2);
    font-weight: 700;
    font-size: 2.5rem;
    color: #fff;
    border-radius: 50%;
    background: #7eb693;
  }
  &__desc {
    font-family: var(--font-2);
    font-weight: 600;
    font-size: 2.5rem;
    color: var(--accent);
  }
}

